--- a/src/pages/home/Components/PostsHome/PostHome.module.scss
+++ b/src/pages/home/Components/PostsHome/PostHome.module.scss
@@ -39,7 +39,7 @@
       .date {
         color: var(--color-secondary);
         font-weight: 500;
-        text-align: end;
+        text-align: flex-end;
       }
     }
   }
